Fixing overflow issue

--- a/assets/sass/block/_report.scss
+++ b/assets/sass/block/_report.scss
@@ -93,6 +93,7 @@
 #report-css {
   flex: 1;
   padding-left: 20px;
+  max-width: 40%;
 
   pre {
     font: 11px/15px Monaco, monospace;
